--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,21 +1,48 @@
 /* COLORES */
-$paleta:(
+
+$colors:(
     "no": rgba(255, 255, 255, 0),
-    "uno": rgba(28, 55, 56),
-    "dos": rgba(55, 106, 109),
-    "tres": rgba(114, 114, 114),
-    "cuatro": rgba(145, 136, 104),
-    "cinco": rgba(255, 251, 252),
-    "seis": rgba(68, 133, 136),
-    "siete": rgba(7, 13, 14),
-    "ocho": rgba(193, 193, 193),
-    "nueve": rgba(73, 73, 73),
-    "diez": rgba(42, 82, 84),
-    "once":rgba(194, 163, 96),
-    "doce": rgba(255, 255, 255),
-    "trece": rgba(97, 97, 97),
-    "catorce": rgb(220, 220, 220),
-    "quince": rgb(240, 240, 240),
-    "dieciseis": rgb(229, 229, 229),
-    "diecisiete": rgb(34, 66, 68),
-);
+
+    "b-uno": rgb(255, 255, 255),
+    "b-dos": rgb(235, 235, 235),
+    "b-tres": rgb(225, 225, 225),
+    "b-cuatro": rgb(215, 215, 215),
+    "b-cinco": rgb(205, 205, 205),
+    "b-seis": rgb(190, 190, 190),
+    "b-siete": rgb(180, 180, 180),
+    "b-ocho": rgb(170, 170, 170),
+    "b-nueve": rgb(160, 160, 160),
+    "b-diez": rgb(150, 150, 150),
+
+    "g-uno": rgb(140, 140, 140),
+    "g-dos": rgb(130, 130, 130),
+    "g-tres": rgb(120, 120, 120),
+    "g-cuatro": rgb(110, 110, 110),
+    "g-cinco": rgb(100, 100, 100),
+    "g-seis": rgb(90, 90, 90),
+    "g-siete": rgb(80, 80, 80),
+    "g-ocho": rgb(70, 70, 70),
+    "g-nueve": rgb(60, 60, 60),
+    "g-diez": rgb(50, 50, 50),
+    "g-once": rgb(40, 40, 40),
+    "g-doce": rgb(30, 30, 30),
+    "g-trece": rgb(20, 20, 20),
+
+    "aa-uno": rgb(70, 168, 227),
+    "aa-dos": rgb(70, 158, 230),
+    "aa-tres": rgb(70, 148, 230),
+    "aa-cuatro": rgb(70, 138, 230),
+    "aa-cinco": rgb(70, 128, 230),
+    "aa-seis": rgb(70, 128, 230),
+
+    "ab-uno": rgba(30, 100, 100),
+    "ab-dos": rgb(30, 90, 90),
+    "ab-cuatro": rgb(30, 80, 80),
+    "ab-cinco": rgba(42, 82, 84),
+    "ab-seis": rgb(30, 70, 70),
+    "ab-siete": rgb(34, 66, 68),
+    "ab-ocho": rgb(36, 61, 61),
+    "ab-nueve": rgba(30, 55, 56),
+    "ab-diez": rgba(30, 50, 50),
+
+)
