--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -3,7 +3,7 @@
     @include justali (center, center);
     @include display(flex);
     @include flex(col);
-    background-color: map-get($map: $paleta, $key: catorce);
+    background-color: map-get($map: $colors, $key: b-tres);
     overflow: hidden;
     &__section{
         @include display(flex);
